Bug fix banner padding on mobile

--- a/src/styles/board.module.css
+++ b/src/styles/board.module.css
@@ -19,12 +19,18 @@
 .messageBanner {
     position: absolute;
     border-radius: 16px;
-    padding: 16px 32px;
+    padding: 8px 16px;
     border: 1px solid white;
     top: 50%;
     left: 50%;
     opacity: 1;
     transform: translate(-50%, -50%);
+}
+
+@media (min-width: 600px) {
+    .messageBanner {
+        padding: 16px 32px;
+    }
 }
 
 .gameOverBanner {
